@@ -41,11 +41,11 @@ static const char ValidChars[] =
     "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
     "_.!@#$%^&*()-+=~[]{}<>:;\\/";
 
-extern int yes_to_all = 0;
-extern int no_to_all = 0;
-extern int verbose = 0;
-extern int quiet = 0; 		/* Don't be helpful. */
-extern int reallyquiet = 0;	/* Don't print errors. */
+extern int yes_to_all;
+extern int no_to_all;
+extern int verbose;
+extern int quiet; 		/* Don't be helpful. */
+extern int reallyquiet;	/* Don't print errors. */
 
 int do_add(const char * const user,
            const char * const password, const char * const enctype,
